Improve doc for api user and api request verify email
